# netbox-kea

./: .editorconfig  .envrc.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  REUSE.toml  codecov.yml  copilot-instructions.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/scripts/: load-sample-data.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.opengrep/: README.md  kea-rules.yaml
.opengrep/tests/: kea-command-result-indexed-without-guard.py  kea-exception-detail-in-response.py  kea-get-client-missing-version.py
docs/superpowers/specs/: 2026-04-04-kea-ipam-sync-job-design.md  2026-04-05-sync-job-visibility-design.md
e2e/: conftest.py  test_kea_plugin_e2e.py
netbox_kea/: __init__.py  constants.py  filtersets.py  forms.py  graphql.py  jobs.py  kea.py  models.py  navigation.py  signals.py  sync.py  tables.py  template_content.py  template_extensions.py  urls.py  utilities.py  views.py
netbox_kea/api/: serializers.py  views.py
netbox_kea/integrations/: __init__.py  dhcp_plugin.py
netbox_kea/mappers/: __init__.py  kea_to_dhcp.py
netbox_kea/migrations/: 0003_server_dual_url.py  0004_alter_server_options.py  0005_add_syncconfig.py  0006_server_sync_enabled.py  0007_syncconfig_constraints.py  0008_add_server_jobsmixin.py  0009_per_protocol_credentials.py  0010_sync_prefix_range_support.py  0010_syncconfig_sync_type_toggles.py  0011_persist_config.py  0011_server_sync_vrf.py  0012_server_sync_type_toggles.py  0012_syncconfig_backfill_applied.py  0013_server_sync_dhcp_plugin_enabled_keadhcplink.py
netbox_kea/templates/netbox_kea/: combined_base.html  combined_leases.html  combined_overview.html  combined_reservations.html  combined_shared_networks.html  combined_subnets.html  dashboard.html  exception_htmx.html  global_leases.html  global_reservations.html  ip_kea_reservations.html  server_dhcp_disable.html  server_dhcp_enable.html  server_dhcp_leases.html  server_dhcp_leases_htmx.html  server_dhcp_options_edit.html  server_dhcp_plugin.html  server_dhcp_subnets.html  server_lease_add.html  server_lease_bulk_import.html  server_lease_edit.html  server_option_def_add.html  server_option_def_delete.html  server_option_def_list.html  server_pool_add.html  server_pool_delete.html  server_reservation_bulk_import.html  server_reservation_delete.html  server_reservation_form.html  server_reservations.html  server_shared_network_add.html  server_shared_network_delete.html  server_shared_network_edit.html  server_shared_networks.html  server_status.html  server_status_badge.html  server_subnet_add.html  (+6 more)
netbox_kea/templatetags/: kea_options.py
netbox_kea/tests/: conftest.py  kea_stub.py  mock_discipline.py  mock_discipline_baseline.txt  query_counts.json  test_api_leases.py  test_api_reservations.py  test_api_views_direct.py  test_conftest.py  test_constants_options.py  test_forms.py  test_global_views.py  test_integration_dhcp_plugin.py  test_ip_kea_view.py  test_jobs.py  test_kea_client.py  test_kea_stub.py  test_mappers_kea_to_dhcp.py  test_mock_discipline.py  test_models.py  test_plugin_config.py  test_reservation_views.py  test_server_generic.py  test_sync.py  test_sync_views.py  test_tables.py  test_template_extensions.py  test_templates.py  test_utilities.py  test_views.py  test_views_combined.py  test_views_dhcp_control.py  test_views_dhcp_plugin.py  test_views_dual_url.py  test_views_leases.py  test_views_options.py  test_views_reservations.py  test_views_server.py  test_views_shared_networks.py  test_views_subnets.py  (+3 more)
netbox_kea/views/: __init__.py  _base.py  combined.py  dhcp_control.py  dhcp_plugin_sync.py  leases.py  options.py  reservations.py  server.py  shared_networks.py  subnets.py  sync_jobs.py  sync_views.py
scripts/: opengrep-scan.sh  opengrep-test.sh
tests/: conftest.py  test_netbox_kea_api_server.py  test_ui.py
tests/docker/: docker-compose.override.yml  nginx.conf
(+11 files in other folders)
